# o2

./: .gitignore  CMakeLists.txt
src/: o2.c  o2.h  o2_audio.cpp  o2_audio.h  o2_discovery.c  o2_send.c  o2_socket.c  o2xx.cpp  o2xx.h
test/: audiolatencytest.cpp  audiotest.cpp  cxxtest.cpp
